<resources>
    <string name="app_name">My Contacts App</string>
    <string name="search">Search</string>
    <string name="name_contact">Name</string>
    <string name="number_contact">Phone Number</string>
    <string name="address_contact">Address</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
</resources>