<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.CreateContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <EditText
            android:id="@+id/name_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect"
            android:hint="@string/name_contact"
            android:paddingBottom="10dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/contact_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect"
            android:hint="@string/number_contact"
            android:paddingBottom="10dp"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/address_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect"
            android:hint="@string/address_contact"
            android:paddingBottom="10dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@color/purple_500"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>